--- a/Index.css
+++ b/Index.css
@@ -7,12 +7,33 @@ body {
 /*    background-repeat: no-repeat;*/
 /*    background-size: cover;*/
     background-color: #444;
+    text-align: center;
 }
 
 h1, h2, h3 {
     color: #ffffff;
     line-height: 1rem;
+    font-style: italic;
     }
+h2 {
+    font-size: 30px;
+    font-style: normal;
+}
+
+.formatting {
+    font-size: 25px;
+    line-height: 2em;
+    color: white;    
+}
+
+a {
+    text-decoration: none;
+    font-size: 20px;
+    color: yellow;
+    word-spacing: 30px;
+    text-transform: uppercase;
+    ter
+}
 
 .borderImg {
     border: 10px dashed red;
